# Genome_Numerology

./: README.md
gnum/: README.md
gnum/gnlib/: CMakeLists.txt  LICENSE
gnum/gnlib/CMake/: ConfigureArchitectureOptimizations.cmake  ConfigureCompilerIDs.cmake  ConfigureCompilerSanity.cmake  DetectArchitectureOptimizations.cmake  RequireC11Compiler.cmake
gnum/gnlib/include/: gn_assert.h  gn_decode.h  gn_encode.h  gn_fasta_read.h  gn_operators.h  gn_pack.h  gn_sequence.h  gn_types.h  gn_unpack.h  portable_endian.h
gnum/gnlib/include/old/: portable_bmi.h
gnum/gnlib/scripts/: cmake_clang_build.sh  cmake_clang_build_xcode.sh  cmake_gcc_build.sh  cmake_gcc_build_eclipse.sh  generate_nt_ascii_to_ctable.py
gnum/gnlib/src/: CMakeLists.txt  gn_fasta_read.c
gnum/gnlib/test/: 001_test_types.c  003_pack_ascii.c  004_reverse.c  005_fasta_read.c  CMakeLists.txt  example.c
